syntax = "proto3";
package sequencer;
import "bignum.proto";

option java_multiple_files = true;
option java_package = "co.chainring.sequencer.proto";
option java_outer_classname = "TradeSchema";

message TradeCreated {
  uint64 buyGuid = 1;
  uint64 sellGuid = 2;
  IntegerValue amount = 3;
  DecimalValue price = 4;
}